--- a/src/pa-page-resource.html
+++ b/src/pa-page-resource.html
@@ -41,7 +41,7 @@
       resource="{{resource}}" zero-value="[[_zeroValue()]]">
     </pa-page-property-list>
 
-    <iron-selector hidden="[[!selectedTab]]" attr-for-selected="key" selected="{{routeData.key}}">
+    <iron-selector hidden="[[!selectedTab]]" attr-for-selected="key" on-selected-changed="[[_changeRoutePath]]">
       <template is="dom-repeat" items="[[list]]" as="item">
         <pa-list-item key="[[item.$key]]" item="[[item]]"></pa-list-item>
       </template>
@@ -74,6 +74,10 @@
         '_tabChanged(selectedTab)',
         '_tabRouteChanged(subrouteData.tab)',
       ],
+      _changeRoutePath: function(e, v) {
+        console.log('_routeChanged(e =', e, ', v =', v, '); route = ', this.route, '; routeTail =', this.routeTail);
+        this.set('route.path', key + '/')
+      },
       _zeroValue: function() {
         return this.$.fbResource.zeroValue
       },
