makes property tab more pretty

--- a/src/pa-page-property-list.html
+++ b/src/pa-page-property-list.html
@@ -8,8 +8,14 @@
   <template>
 
     <style include="shared-styles">
+      :host(:not([hidden])) {
+        display: block;
+        padding: 4px 16px;
+      }
+      :host([hidden]) {
+        display: none;
+      }
     </style>
-
     <firebase-query path="[[_listPath(resource.p)]]" data="{{props}}"
       order-by-child="o">
     </firebase-query>
