--- a/src/pa-main-content.html
+++ b/src/pa-main-content.html
@@ -51,6 +51,10 @@
         font-weight: normal;
       }
 
+      paper-tab {
+        text-transform: uppercase;
+      }
+
     </style>
 
     <app-route route="{{route}}" pattern="/:tab" data="{{routeData}}"
