--- a/src/psk-app.html
+++ b/src/psk-app.html
@@ -148,18 +148,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script>
     Polymer({
       is: 'psk-app',
+
       properties: {
         foo: {
           type: String,
           value: 'Hello, World'
         }
       },
-      attached() {
+
+      attached: function() {
         if (!this.route.path) {
           this.set('route.path', '/');
         }
       },
-      _drawerSelected() {
+
+      _drawerSelected: function() {
         if (!this.$.drawer.persistent) {
           this.$.drawer.close();
         }
