iron pages vertical height

--- a/src/pa-main-content.html
+++ b/src/pa-main-content.html
@@ -32,6 +32,14 @@
         display: block;
       }
 
+      iron-pages > * {
+        min-height: 100vh;
+      }
+
+      iron-pages a {
+        color: var(--app-primary-color);
+      }
+
       .main-header {
         border-bottom: 1px solid #ddd;
         background-color: var(--app-primary-color);
