--- a/src/pa-page-resource.html
+++ b/src/pa-page-resource.html
@@ -29,7 +29,8 @@
 
     <firebase-query
       path="[[_listPath(routeData.key)]]"
-      data="{{tabs}}">
+      data="{{tabs}}"
+      order-by-child="o">
     </firebase-query>
 
     <firebase-query
